[gd_scene load_steps=8 format=3 uid="uid://1vnf1art3bif"]

[ext_resource type="Script" path="res://Objects/Switch.gd" id="1_q2bh7"]
[ext_resource type="PackedScene" uid="uid://bsloe4rthghr6" path="res://Objects/InteractionIndicator.tscn" id="2_3u4xv"]
[ext_resource type="Texture2D" uid="uid://jytq0lfmeqms" path="res://Assets/dungeonTiles.png" id="2_dg8vk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dfm7u"]
atlas = ExtResource("2_dg8vk")
region = Rect2(64, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a86lr"]
atlas = ExtResource("2_dg8vk")
region = Rect2(80, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_akrb5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfm7u")
}],
"loop": false,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a86lr")
}],
"loop": false,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8abr"]
size = Vector2(44, 18)

[node name="Switch" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_q2bh7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_akrb5")
animation = &"off"
autoplay = "off"

[node name="InteractionIndicator" parent="." instance=ExtResource("2_3u4xv")]
visible = false
position = Vector2(-0.0371399, -31.0729)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_f8abr")

[connection signal="body_entered" from="." to="." method="switchEntered"]
[connection signal="body_exited" from="." to="." method="switchExited"]
